# cro_rmi_improvement_feature

./: .gitignore  README.md  pyproject.toml
src/cro_rmi_improvement_feature/: __init__.py
src/cro_rmi_improvement_feature/find_similar_risk/: compare_models.py  embedding_providers.py  improve_cache.ipynb  main.py  notebook.ipynb  notebook_display_result.ipynb  notebook_run_data.ipynb  notebook_summary_table.ipynb  notebook_summary_table_top_n.ipynb  notebook_summary_table_top_n_each_risk_cat.ipynb  notebook_test_sample.ipynb  novel_risk_assistant_only_select_choice.py
src/cro_rmi_improvement_feature/plot_risk_related/: README.md  add_embedding.ipynb  analyze_risk_data.ipynb  data_processing.py  debug.ipynb  debug_embedding.ipynb  etl_data.ipynb  etl_data_250327.ipynb  etl_data_250520.ipynb  etl_data_250528.ipynb  etl_data_250604.ipynb  graph_layout.py  merge_data.ipynb  network_analysis.ipynb  plot_network.py  plot_network_defaut_value.py  post_proces_node.py  relation_for_risk_catalog.ipynb  run_plot_network.sh  tell_a_story.ipynb  try_to_find_sweetspot.ipynb  utils.py
src/cro_rmi_improvement_feature/plot_risk_related/design/: gemini_design.drawio
src/cro_rmi_improvement_feature/rmi_risk_validate_feedback/: convert_to_excel.py  main.py  notebook.ipynb  test_update_cache.ipynb
tests/: __init__.py
