[project]
name = "cro_rmi_improvement_feature"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thanatorn Khumrang", email = "fordthanatorn@gmail.com"},
]
dependencies = [
    "langchain-openai>=0.0.3",
    "langchain-core>=0.1.15",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.1",
    "openpyxl>=3.1.2",  # Required for pandas Excel support
    "langchain-community>=0.3.20",
    "ipykernel>=6.29.5",
    "sentence-transformers>=4.1.0",
    "numpy>=2.2.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"
distribution = false
